Actions
Bug #11720
closedrpcmod: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/rpc/rpcmod.c:240:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())rmm_rput, ^ ../../common/rpc/rpcmod.c:241:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())rmm_rsrv, ^ ../../common/rpc/rpcmod.c:255:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())rmm_wput, ^ ../../common/rpc/rpcmod.c:256:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())rmm_wsrv, ^ ../../common/rpc/clnt_clts.c: In function 'endpnt_repossess': ../../common/rpc/clnt_clts.c:2008:7: error: cast between incompatible function types from 'void (*)(zoneid_t)' {aka 'void (*)(int)'} to 'void (*)(void *)' [-Werror=cast-function-type] (task_func_t *)endpnt_reclaim, (void *)ALL_ZONES, ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4d633836fc25186ed4c118b2072d2b88cf87a700
commit 4d633836fc25186ed4c118b2072d2b88cf87a700 Author: Toomas Soome <tsoome@me.com> Date: 2019-09-30T19:50:59.000Z 11720 rpcmod: cast between incompatible function types Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Dan McDonald <danmcd@joyent.com>
Actions