11720 rpcmod: cast between incompatible function types Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Dan McDonald <danmcd@joyent.com>